# primer-id

./: .gcloudignore  .gitignore  README.md  app.yaml  cypress.config.ts  next.config.js  package.json  tailwind.config.js  tsconfig.json
HPC/: .gitignore  Cargo.toml  Dockerfile  README.md  bootstrap_and_verify.sh  cron_apis.php  docker-compose.yml  docker.sh  entrypoint.sh  intactness.php  locations.example.json  locations.example.php  mail.php  ogv.php  package-lock.json  package.json  release.sh  tcs-dr.php
HPC/environment_setup/: README.md  intactness.production.yml  intactness.yml  locator.yml  ogv.production.yml  ogv.yml  splicing.yml  tcsdr.yml
HPC/g2p/corereceptor/: core_receptor.py
HPC/intactness/: README.md  intactness.php
HPC/legacy/: Dockerfile  intactness.php
HPC/ogv/: README.md
HPC/ogv-server/: README.md  Snakefile  compute-distance.js  ogv.php  result-summary.py
HPC/ogv-server/HBL/: data_filter-2.bf  data_filter.bf
HPC/ogv-server/HBL/lib/: igscueal.bf
HPC/router/: index.html  index.js
HPC/src/: compress.rs  load_env_vars.rs  load_locations.rs  lock_file.rs  main.rs  pipeline.rs  process_intact.rs  process_ogv.rs  run_command.rs  send_email.rs  utils.rs
HPC/src/lib/: bin_locations.rs  cloud_storage.rs  compress.rs  email_templates.rs  get_api.rs  load_env_vars.rs  load_locations.rs  lock_file.rs  mod.rs  pipeline.rs  run_command.rs  send_email.rs  string_map_to_string.rs
HPC/src/process_ogv/: initialize_ogv.rs  post_processing_ogv.rs
HPC/tcsdr/: README.md
cypress/: README.md
cypress/e2e/: CoReceptor.cy.tsx  DR.cy.tsx  Intactness.cy.tsx  Locator.cy.tsx  OGV.cy.tsx  Splicing.cy.tsx  TCS.cy.tsx
cypress/fixtures/locator/: P05.fasta.csv
cypress/fixtures/tcsdr/: tcs_params.json
cypress/support/: createPipelineVerifier.ts  e2e.ts  mongo-server.js  start-server.js  waitForRequests.ts
prisma/: schema.prisma  schema.test.prisma
public/: manifest.json
src/: middleware.ts
src/components/: ChangeLog.tsx  Layout.tsx  Nav.tsx  SEO.tsx
src/components/OGV/: ConfirmModal.tsx  Confirmation.tsx  Conversion.tsx  OGVPage.tsx  Submit.tsx  Uploads.tsx
src/components/TCSDR/: Confirmation.tsx  DRVersion.tsx  Form.tsx  Uploads.tsx
src/components/coreceptor/: Confirmation.tsx  Page.tsx
src/components/corereceptor/: Confirmation.tsx  Page.tsx
src/components/form/: Accordion.tsx  Alert.tsx  Button.tsx  Checkbox.tsx  Collapse.tsx  ConfirmationDisplay.tsx  Input.tsx  InputFile.tsx  Modal.tsx  MyCollapse.tsx  Paper.tsx  RadioGroup.tsx  Slider.tsx  Switch.tsx  Tooltip.tsx
src/components/home/: ImageWithOverlay.tsx  Page.tsx
src/components/intactness/: Confirmation.tsx  Page.tsx
src/components/locator/: Confirmation.tsx  Page.tsx
src/components/splicing/: Confirmation.tsx  Page.tsx  SpliceConfig.tsx  spliceConfigValues.json
src/components/templates/: ConfirmationModal.tsx  HTSF.tsx  PageDescription.tsx  SharedSubmissionData.tsx  Uploads.tsx
src/contexts/: OGVContext.tsx  PrimerContext.tsx  TCSContext.tsx  TCSDRContext.tsx
src/hooks/: useCoreReceptor.tsx  useDRParams.tsx  useIntactness.tsx  useIsInputDirSupported.tsx  useIsLoadingAnimation.tsx  usePrideMonthStyling.tsx  useScrollToDivOnChange.tsx  useScrollToDivOnVisibilityToggle.tsx  useSequenceFile.tsx  useSharedSubmissionData.tsx  useStepForm.tsx  useTCSVersion.tsx  useUploadSignedURLs.tsx  useUploadsOrHTSF.tsx
src/hooks/queries/: useCoreceptor.tsx  usePost.tsx  useSplicing.tsx
src/models/: CoreReceptor.ts  Intact.ts  OGV.ts  TCSDR.ts
src/pages/: _app.tsx  _middleware.ts  changelog.tsx  contact.tsx  index.tsx  links.tsx  list.tsx
src/pages/api/: ogv.ts
src/pages/coreceptor/: index.tsx
src/pages/corereceptor/: index.tsx
src/pages/dr/: [id].tsx  index.tsx
src/pages/intactness/: index.tsx
src/pages/locator/: index.tsx
src/pages/ogv/: [id].tsx  index.tsx
src/pages/splicing/: index.tsx
src/pages/tcs/: [id].tsx  index.tsx
src/styles/: globals.css
src/utils/: api.ts  dbConnect.ts  prisma.ts  prismaUtils.ts  syntaxHighlight.ts  translateVariablesForCLI.ts
src/utils/constants/: GENOMES.tsx  INITIAL_OGV.ts  INITIAL_PRIMER.ts  INITIAL_TCSDR.ts  LINKS.ts  PLATFORM_FORMATS.ts  PRESET_PRIMERS.ts  UNC_COLORS.ts
(+39 files in other folders)
