[package]
name = "primer_id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="utils"
path="src/lib/mod.rs"

# cargo run --bin process_queue -- --is_dev
[[bin]]
name = "process_queue"
path = "src/bin/process_queue/main.rs"

# cargo run --bin ogv -- --id {id} --is_dev --is_stale
[[bin]]
name = "ogv"
path = "src/bin/ogv/main.rs"

# [[bin]]
# name = "tcs"
# path = "src/bin/tcs/main.rs"

[[bin]]
name = "intactness"
path = "src/bin/intactness/main.rs"

[dependencies]
exitfailure = "0.5.1"
serde_json = "1.0.85"
serde = {version = "1.0.194", features = ["derive"]}
lettre = "0.11"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
glob = "0.3.1"
chrono = "0.4.38"
anyhow = "1.0.86"
zip-extensions = "0.8.0"
flate2 = "1.0.30"
tar = "0.4.41"
