[package]
name = "primer_id"
version = "0.1.0"
edition = "2021"

# cargo run --bin tcsdr -- --id=69405e7c7c6100327e7f00cb --is_dev --cores=5

[lib]
name="utils"
path="src/lib/mod.rs"

# cargo run --bin process_queue -- --is_dev
[[bin]]
name = "process_queue"
path = "src/bin/process_queue/main.rs"

# cargo run --bin ogv -- --id=1 --is_dev --cores=3
[[bin]]
name = "ogv"
path = "src/bin/ogv/main.rs"

# cargo run --bin tcsdr -- --id=1 --is_dev --is_stale --cores=3
[[bin]]
name = "tcsdr"
path = "src/bin/tcsdr/main.rs"

# cargo run --bin intactness -- --id=1 --is_dev --cores=3
[[bin]]
name = "intactness"
path = "src/bin/intactness/main.rs"

# cargo run --bin coreceptor -- --id=1 --is_dev --cores=3
[[bin]]
name = "coreceptor"
path = "src/bin/coreceptor/main.rs"

# cargo run --bin splicing -- --id=1 --is_dev --cores=3
[[bin]]
name = "splicing"
path = "src/bin/splicing/main.rs"

[dependencies]
exitfailure = "0.5.1"
serde_json = "1.0.85"
serde = {version = "1.0.194", features = ["derive"]}
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
glob = "0.3.1"
chrono = "0.4.38"
anyhow = "1.0.86"
zip-extensions = "0.8.0"
flate2 = "1.0.30"
tar = "0.4.41"
rayon = "1.10.0"
bio = "2.0.1"
cargo-zigbuild = "0.19.1"
mail-send = "0.4.9"
# neeed for production
openssl = { version = "0.10.59", features = ["vendored"]}
openssl-sys = { version = "0.9.103", features = ["vendored"] }